style.css
/* ... */
.no-results {
	padding: 20px;
}

.no-results .entry-content {
	padding: 20px 0;
}

/* ------------------------------------------------------------------------ 12. Page Templates */

/* site map */

h2#authors, h2#pages, h2#posts {
	font-weight: normal;
	border-bottom: 1px solid #eee;
	margin-top: 15px;
	padding-left: 35px;
	background: url(images/icn-sitemap.png) no-repeat;
	background-position: 0 5px;
}

h2#pages {
	background-position: 0 -25px;
}

h2#posts {
	background-position: 0 -52px;
}

ul#sitemap-posts {
	margin-left: 0;
}

ul#sitemap-posts > li {
	list-style: none;
}

ul#sitemap-posts > li h3 {
	font-weight: normal;
	margin-bottom: 0;
}

ul#sitemap-posts ul {
	margin-top: 10px;
	margin-bottom: 10px;
}

/* ------------------------------------------------------------------------ 12. IE8 Styles */

#ie8 .format-image img {
	width: auto\9;
}

/* ------------------------------------------------------------------------ 13. Media queries */


/* Smartphones */
@media (max-width: 480px) {
	
	#logo {
		text-align: center;
	}
	
	#header.imageyup #logo {
		position: absolute;
		top: 15%;
		left: 0;
		padding: 0 !important;
		margin-top: 0;
		width: 100%
	}
	
	#header.imageyup #logo #site-title a, #header.imageyup #logo #site-title {
		font-size: 1.25em;
		line-height: 1;
	}
	
	/* posts */
	
	.post .thumbnail img {
		width: 80px;
		height: auto;
	}
	
	.post .post-title {
		font-size: 2em;
		line-height: 1.2;
	}
		
	.entry-content embed, .entry-content iframe, .entry-content object,
	.entry-content p embed, .entry-content p iframe, .entry-content p object {
		max-width: 100%;
	}
	
	.meta-comment-link {
		border-top: 1px solid #eee;
		padding-top: 19px;
	}
	
	.meta-date-cat-tags {
		padding-bottom: 20px;
		text-align: center;
	}
	
	/* Post Comments */
	
	.author-box-image img {
		width: 50px;
		height: auto;
	}
	
	.post.format-status .post-header .entry-content, .fullwidth .post.format-status .post-header .entry-content {
		min-height: 60px;
	}
	
	/* post format video */
	
	.format-video embed, .format-video iframe, .format-video object {
	 	max-width: 100%;
	}
	
	
	/* widgets */
	
	.tabbed-widget .tab-content ul li {
		min-height: 50px;
	}
	
	/* footer area */
	
	#sub-floor #credit {
		text-align: center;
	}
	
	.tabbed-widget .tab-count-3 > li > a {
		width: 86px; 
	}
	
	.tabbed-widget .tab-count-4 > li > a {
		width: 64px; 
	}	

}

/* tablet and mobile */ 
@media (max-width: 979px) {	

	/* make the menu pretty while in dropdown */
	#social-networking {
		position: absolute;
		top: -4px;
		right: 20px;
		margin-right: 0;
	}
		
	.social-icons.nav {
		display: inline-block;
	}
	
	.social-icons.nav > li {
		float: left;
	}
	
	.social-icons.nav > li a {
		margin-left: 12px;
	}
	
	.navbar .dropdown-menu .active > a {
		color: #fff;
	}
	
	.navbar .dropdown-menu li a:hover, .navbar .dropdown-menu li.active a:hover{
		color: #fff;
	}
	
	/* navbr items */
	
	.navbar .dropdown-menu {
		padding: 0;
	}
	
	.navbar ul.nav-menu {
		border-top: 1px solid #444;
		margin-top: 15px;
		padding-top: 10px;
	}
	
	.navbar .dropdown-menu a {
		border-bottom: 0;
	}
	
	.navbar b.caret {
		display: none;
	}
	
	.navbar .nav-menu > li a {
		padding: 10px 15px;
	}
	
	.navbar .nav > li > a, .navbar .dropdown-menu a {
		font-weight: normal;
	}
	
	.navbar .nav-menu li > a:hover, .navbar .nav .active > a, .navbar .nav .active > a:hover {
		color: #fff;
		background: none;
	}
	
	.navbar .btn-navbar {
		margin-left: 15px;
	}
	
			
}

/* mobile to tablet */ 
@media only screen and (max-width: 767px) {
	
	body {
		padding-left: 0;
		padding-right: 0;
	}
	
	.navbar-fixed-top {
	    margin-left: 0;
	    margin-right: 0;
	}
	  
	.navbar .nav {
	 	margin-left: 0;
	}
	 	
	.container {
		padding-left: 20px;
		padding-right: 20px;
	}
	
	#sub-floor #credit {
		text-align: center;
	}
	
	/* post format status */
	.post.format-status .post-avatar {
		float: left;
		margin: 0 20px 20px 0;
	}
	
}


/* Landscape tablets */
@media (min-width: 768px) and (max-width: 979px) {
	
	.tabbed-widget .tab-count-1 > li > a {
		width: 226px;
	}
	
	.tabbed-widget .tab-count-2 > li > a {
		width: 112px;
	}

	.tabbed-widget .tab-count-3 > li > a {
		width: 74px;
	}

	.tabbed-widget .tab-count-4 > li > a {
		width: 55px;
		font-size: 10px;
	}

}

/* default desktop */
@media (min-width: 980px) {
	
	.menu-header-container {
		width: 680px;
	}
	
	/* Position the submenus. This is toggled with theme.js */
	.submenu-show {
		display:block; 
		position:absolute; 
		left:100%;
		-webkit-border-radius: 3px;
		-moz-border-radius: 3px;
		border-radius: 3px;
		margin-top: -25px !important;
	}
	
	/* Hide the submenus. This is toggled with theme.js. */
	.submenu-hide {
		display: none !important;
		float:right;
		position: relative;
		top: auto;
	}

}

